[gd_scene load_steps=82 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://png/Slide (1).png" type="Texture" id=2]
[ext_resource path="res://png/Slide (2).png" type="Texture" id=3]
[ext_resource path="res://png/Slide (3).png" type="Texture" id=4]
[ext_resource path="res://png/Slide (4).png" type="Texture" id=5]
[ext_resource path="res://png/Slide (5).png" type="Texture" id=6]
[ext_resource path="res://png/Slide (6).png" type="Texture" id=7]
[ext_resource path="res://png/Slide (7).png" type="Texture" id=8]
[ext_resource path="res://png/Slide (8).png" type="Texture" id=9]
[ext_resource path="res://png/Slide (9).png" type="Texture" id=10]
[ext_resource path="res://png/Slide (10).png" type="Texture" id=11]
[ext_resource path="res://png/Slide (11).png" type="Texture" id=12]
[ext_resource path="res://png/Idle (1).png" type="Texture" id=13]
[ext_resource path="res://png/Idle (2).png" type="Texture" id=14]
[ext_resource path="res://png/Idle (3).png" type="Texture" id=15]
[ext_resource path="res://png/Idle (4).png" type="Texture" id=16]
[ext_resource path="res://png/Idle (5).png" type="Texture" id=17]
[ext_resource path="res://png/Idle (6).png" type="Texture" id=18]
[ext_resource path="res://png/Idle (7).png" type="Texture" id=19]
[ext_resource path="res://png/Idle (8).png" type="Texture" id=20]
[ext_resource path="res://png/Idle (9).png" type="Texture" id=21]
[ext_resource path="res://png/Idle (10).png" type="Texture" id=22]
[ext_resource path="res://png/Idle (11).png" type="Texture" id=23]
[ext_resource path="res://png/Idle (12).png" type="Texture" id=24]
[ext_resource path="res://png/Idle (13).png" type="Texture" id=25]
[ext_resource path="res://png/Idle (14).png" type="Texture" id=26]
[ext_resource path="res://png/Idle (15).png" type="Texture" id=27]
[ext_resource path="res://png/Idle (16).png" type="Texture" id=28]
[ext_resource path="res://png/Dead (1).png" type="Texture" id=29]
[ext_resource path="res://png/Dead (2).png" type="Texture" id=30]
[ext_resource path="res://png/Dead (3).png" type="Texture" id=31]
[ext_resource path="res://png/Dead (4).png" type="Texture" id=32]
[ext_resource path="res://png/Dead (5).png" type="Texture" id=33]
[ext_resource path="res://png/Dead (6).png" type="Texture" id=34]
[ext_resource path="res://png/Dead (7).png" type="Texture" id=35]
[ext_resource path="res://png/Dead (8).png" type="Texture" id=36]
[ext_resource path="res://png/Dead (9).png" type="Texture" id=37]
[ext_resource path="res://png/Dead (10).png" type="Texture" id=38]
[ext_resource path="res://png/Dead (11).png" type="Texture" id=39]
[ext_resource path="res://png/Dead (12).png" type="Texture" id=40]
[ext_resource path="res://png/Dead (13).png" type="Texture" id=41]
[ext_resource path="res://png/Dead (14).png" type="Texture" id=42]
[ext_resource path="res://png/Dead (15).png" type="Texture" id=43]
[ext_resource path="res://png/Dead (16).png" type="Texture" id=44]
[ext_resource path="res://png/Dead (17).png" type="Texture" id=45]
[ext_resource path="res://png/Jump (1).png" type="Texture" id=46]
[ext_resource path="res://png/Jump (2).png" type="Texture" id=47]
[ext_resource path="res://png/Jump (3).png" type="Texture" id=48]
[ext_resource path="res://png/Jump (4).png" type="Texture" id=49]
[ext_resource path="res://png/Jump (5).png" type="Texture" id=50]
[ext_resource path="res://png/Jump (6).png" type="Texture" id=51]
[ext_resource path="res://png/Jump (7).png" type="Texture" id=52]
[ext_resource path="res://png/Jump (8).png" type="Texture" id=53]
[ext_resource path="res://png/Jump (9).png" type="Texture" id=54]
[ext_resource path="res://png/Jump (10).png" type="Texture" id=55]
[ext_resource path="res://png/Jump (11).png" type="Texture" id=56]
[ext_resource path="res://png/Jump (12).png" type="Texture" id=57]
[ext_resource path="res://png/Jump (13).png" type="Texture" id=58]
[ext_resource path="res://png/Jump (14).png" type="Texture" id=59]
[ext_resource path="res://png/Jump (15).png" type="Texture" id=60]
[ext_resource path="res://png/Jump (16).png" type="Texture" id=61]
[ext_resource path="res://png/Run (1).png" type="Texture" id=62]
[ext_resource path="res://png/Run (2).png" type="Texture" id=63]
[ext_resource path="res://png/Run (3).png" type="Texture" id=64]
[ext_resource path="res://png/Run (4).png" type="Texture" id=65]
[ext_resource path="res://png/Run (5).png" type="Texture" id=66]
[ext_resource path="res://png/Run (6).png" type="Texture" id=67]
[ext_resource path="res://png/Run (7).png" type="Texture" id=68]
[ext_resource path="res://png/Run (8).png" type="Texture" id=69]
[ext_resource path="res://png/Run (9).png" type="Texture" id=70]
[ext_resource path="res://png/Run (10).png" type="Texture" id=71]
[ext_resource path="res://png/Run (11).png" type="Texture" id=72]
[ext_resource path="res://Dying/Dead (1).png" type="Texture" id=73]
[ext_resource path="res://Dying/Dead (2).png" type="Texture" id=74]
[ext_resource path="res://Dying/shooter3.png" type="Texture" id=75]
[ext_resource path="res://Dying/shooter2.png" type="Texture" id=76]
[ext_resource path="res://Dying/shooter1.png" type="Texture" id=77]
[ext_resource path="res://sound/coins.wav" type="AudioStream" id=78]
[ext_resource path="res://sound/crismat.wav" type="AudioStream" id=79]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "slide",
"speed": 15.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ) ],
"loop": true,
"name": "dead",
"speed": 12.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ ExtResource( 73 ), ExtResource( 74 ) ],
"loop": true,
"name": "dying",
"speed": 12.0
}, {
"frames": [ ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 76 ) ],
"loop": true,
"name": "shooter",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 54 )

[node name="Player" type="KinematicBody2D"]
editor/display_folded = true
position = Vector2( 75.8373, 95.1175 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.0838623, -0.161041 )
scale = Vector2( 0.2, 0.2 )
z_index = 1
frames = SubResource( 1 )
animation = "shooter"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.71471, -3.30963 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.723511, 0.0505066 )
current = true
limit_left = 0
limit_top = -100000000
limit_right = 12640
limit_bottom = 700

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 44.3231, 6.64161 )
z_index = 8
z_as_relative = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="sound_coins" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 78 )

[node name="sound_game" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 79 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
